--- a/loeng04/style.css
+++ b/loeng04/style.css
@@ -92,12 +92,91 @@ section form > * {
 
 /* Külgpaanid */
 aside img {
-    width: 80%;
+    width: 95%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border-style: double;
+    border-color: black;
+    box-shadow: 0px 0px 15px black;
+    border-radius: 10px 10px 10px 10px;
 }
 
 main > aside {
-    background-color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+}
+
+/* Jalus */
+footer > section {
+    width: 100%;
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 15px;
+}
+
+footer div {
+    padding: 10px;
+}
+
+.footer_nav {
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.footer_nav a {
+    padding-left: 25px;
+    padding-right: 25px;
+    color: rgb(255, 0, 179);
+    font-weight: bold;
+    font-size: 15px;
+    letter-spacing: 2px;
+}
+
+.footer_nav p {
+    color: rgb(221, 206, 206);
+    letter-spacing: 2px;
+}
+
+.footer_nav a:hover {
+    color: rgb(255, 116, 158);
+    cursor: pointer;
+}
+
+.footer_credits {
+    background-color: rgba(255, 0, 179, 0.37);
+    text-align: center;
+    padding: 0px;
+    font-size: small;
+    border-radius: 0px 0px 10px 10px;
+}
+
+/* Vasak külgpaan */
+aside ul {
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+aside li a{
+    color: rgb(255, 0, 179);
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
+aside li a:hover {
+    color: rgb(255, 116, 158);
+    cursor: pointer;
 }
