--- a/colors/style.css
+++ b/colors/style.css
@@ -57,11 +57,8 @@ header {
   }
 
 main .missionclass{
-    width: 100%;
     height: auto;
     display: flex;
-    background-position: top right;
-    background-repeat: no-repeat;
     background-color: #f4b6c0;
 }
 
@@ -72,6 +69,17 @@ main .missionclass{
     text-align: left;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+.signaturegraphics {
+  overflow: hidden;
+}
+
+.signature {
+  width: 350px;
+  height: 500px;
+  object-fit: cover;
+  margin-right: 350px;
 }
 
 main .introphotos {
