--- a/colours/style.css
+++ b/colours/style.css
@@ -145,12 +145,46 @@ main .extrapart {
 footer {
     background-color: #083f42;
     width: 100%;
-    height: 300px;
+    height: auto;
     display: flex;
 }  
 
-.flex-container {
-    display: flex
+footer > section {
+  width: 100%;
+  margin-top: 120px;
+  margin-bottom: 30px;
+  min-height: 50px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+}
+
+footer div {
+  padding: 10px;
+}
+
+.footer_nav {
+  margin-right: auto;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.footer_nav p {
+  color: rgb(255, 255, 255);
+  letter-spacing: 2px;
+}
+
+.footer_credits {
+  text-align: center;
+  padding: 0px;
+}
+
+.footer_credits p {
+  color: #ffffff;
+  font-size: 0.9rem;
 }
 
 .social {
