--- a/colours/style.css
+++ b/colours/style.css
@@ -93,7 +93,9 @@ main .missionclass{
 main .introduction {
   margin-top: 30px;
   margin-bottom: 30px;
-  width: 100%;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: auto;
   height: auto;
   display: flex;
   padding-top: 60px;
@@ -116,7 +118,9 @@ main .introphotos {
 main .extrapart {
   margin-top: 60px;
   margin-bottom: 60px;
-  width: 100%;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: auto;
   height: auto;
   display: flex;
   padding-top: 60px;
@@ -188,7 +192,7 @@ footer div {
 }
 
 .social {
-  margin-top: 70px;
+  margin-top: 90px;
   padding: 0;
   position: absolute;
   left: 47%;
