--- a/colours/style.css
+++ b/colours/style.css
@@ -46,6 +46,7 @@ img {
   margin-right: auto;
 }
 
+
 .logo {
     width: 250px;
     margin-left: 30px;
@@ -299,4 +300,20 @@ footer div {
       display: block;
       text-align: left;
     }
+
+    .imgage1,
+    .image2 {
+    width: 100%;
+    object-fit: cover;
+    margin-bottom: 30px;
   }
+
+  main .introduction,
+  main .extrapart {
+    padding: 10px;
+
+  }
+
+
+  }
+
