--- a/colours/style.css
+++ b/colours/style.css
@@ -305,7 +305,8 @@ footer div {
     .image2 {
     width: 100%;
     object-fit: cover;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 
   main .introduction,
@@ -326,5 +327,8 @@ footer div {
     padding: 30px;
   }
 
+  .sissejuhatus {
+    padding-top: 50px;
+  }
   }
 
